initial route planning tool
